feat: Рализовать класс Api

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Smitt8/mesto.git"
   },
-  "author": "Natalya Krukaova & Igor Prokazov",
+  "author": "Natalya Krukova & Igor Prokazov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Smitt8/mesto/issues"
